# arsenal-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  agent.py  cli.py  config.py  memory.py
arsenal/: __init__.py  __main__.py  server.py
arsenal/config/: defaults.yaml  settings.py
arsenal/core/: jobs.py  runner.py  scope.py
arsenal/db/: database.py  models.py
arsenal/parsers/: ffuf.py  generic.py  nmap.py  nuclei.py  sqlmap.py
arsenal/plugins/: loader.py
arsenal/tools/: base.py
arsenal/tools/exploit/: crackmapexec.py  metasploit.py  searchsploit.py
arsenal/tools/network/: arpspoof.py  bettercap.py  responder.py
arsenal/tools/passwords/: cewl.py  hashcat.py  hydra.py  john.py  medusa.py
arsenal/tools/post/: bloodhound.py  linpeas.py  pspy.py
arsenal/tools/recon/: amass.py  dig.py  nmap.py  shodan.py  subfinder.py  theharvester.py  whois.py
arsenal/tools/webapp/: dalfox.py  ffuf.py  gobuster.py  js_analyzer.py  nikto.py  nuclei.py  sqlmap.py  whatweb.py
arsenal/tools/wireless/: aircrack.py  wifite.py
