[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arsenal-mcp"
version = "0.1.0"
description = "Kali Linux pentesting MCP server — exposes 45+ security tools as MCP tools for AI-assisted penetration testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "afhultin" },
]
keywords = ["mcp", "pentesting", "kali", "security", "claude", "ai", "red-team", "bug-bounty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/afhultin/arsenal-mcp"
Repository = "https://github.com/afhultin/arsenal-mcp"
Issues = "https://github.com/afhultin/arsenal-mcp/issues"

[project.scripts]
arsenal = "arsenal.server:main"
arsenal-agent = "agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["arsenal", "agent"]
